--- a/index.html
+++ b/index.html
@@ -1,206 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Stopwatch</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-        }
-        .stopwatch {
-            background: #fff;
-            padding: 30px;
-            border-radius: 15px;
-            text-align: center;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-            backdrop-filter: blur(10px);
-            width: 350px;
-        }
-        h1 {
-            font-size: 40px;
-            margin: 0 0 20px 0;
-            color: #333;
-        }
-        .time {
-            font-size: 48px;
-            font-weight: bold;
-            margin-bottom: 20px;
-            color: #007bff;
-        }
-        .buttons {
-            display: flex;
-            gap: 10px;
-            justify-content: center;
-        }
-        button {
-            padding: 10px 20px;
-            font-size: 16px;
-            border: none;
-            border-radius: 6px;
-            cursor: pointer;
-            transition: background 0.2s;
-        }
-        .start {
-            background: #28a745;
-            color: white;
-        }
-        .start:hover {
-            background: #218838;
-        }
-        .pause {
-            background: #ffc107;
-            color: #212529;
-        }
-        .pause:hover {
-            background: #e0a800;
-        }
-        .reset {
-            background: #dc3545;
-            color: white;
-        }
-        .reset:hover {
-            background: #c82333;
-        }
-        .lap {
-            background: #17a2b8;
-            color: white;
-        }
-        .lap:hover {
-            background: #138496;
-        }
-        .lap-times {
-            margin-top: 20px;
-            max-height: 200px;
-            overflow-y: auto;
-            border-top: 1px solid #eee;
-            padding-top: 15px;
-        }
-        .lap-item {
-            display: flex;
-            justify-content: space-between;
-            padding: 5px 10px;
-            margin: 5px 0;
-            background: #f8f9fa;
-            border-radius: 5px;
-            font-size: 14px;
-        }
-        .lap-number {
-            font-weight: bold;
-            color: #495057;
-        }
-        .lap-time {
-            color: #007bff;
-            font-family: monospace;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Stopwatch</title>
+<style>
+body {
+    font-family: Arial, sans-serif;
+    background: #eee;
+    margin: 0;
+    padding: 20px;
+}
+.stopwatch {
+    max-width: 300px;
+    margin: 50px auto;
+    padding: 20px;
+    background: white;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+.time {
+    font-size: 48px;
+    margin-bottom: 20px;
+    color: #007bff;
+}
+button {
+    padding: 10px 15px;
+    font-size: 16px;
+    margin: 5px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.start { background: #28a745; color: white; }
+.pause { background: #ffc107; color: black; }
+.reset { background: #dc3545; color: white; }
+</style>
 </head>
 <body>
-    <div class="stopwatch">
-        <h1>Stopwatch</h1>
-        <div class="time" id="display">00:00:00</div>
-        <div class="buttons">
-            <button class="start" id="startBtn">Start</button>
-            <button class="pause" id="pauseBtn" disabled>Pause</button>
-            <button class="lap" id="lapBtn" disabled>Lap</button>
-            <button class="reset" id="resetBtn">Reset</button>
-        </div>
-        <div class="lap-times" id="lapTimes"></div>
-    </div>
-    <script>
-        let startTime = 0;
-        let elapsedTime = 0;
-        let timerInterval = null;
-        let running = false;
-        let lapCounter = 0;
-        let lapTimes = [];
-        const display = document.getElementById("display");
-        const startBtn = document.getElementById("startBtn");
-        const pauseBtn = document.getElementById("pauseBtn");
-        const resetBtn = document.getElementById("resetBtn");
-        const lapBtn = document.getElementById("lapBtn");
-        const lapTimesContainer = document.getElementById("lapTimes");
+<div class="stopwatch">
+    <h1>Stopwatch</h1>
+    <div class="time" id="display">00:00:00</div>
+    <button class="start" id="startBtn">Start</button>
+    <button class="pause" id="pauseBtn" disabled>Pause</button>
+    <button class="reset" id="resetBtn">Reset</button>
+</div>
+<script>
+let startTime=0, elapsedTime=0, timerInterval=null, running=false;
+const display=document.getElementById("display"),
+startBtn=document.getElementById("startBtn"),
+pauseBtn=document.getElementById("pauseBtn"),
+resetBtn=document.getElementById("resetBtn");
 
-        function formatTime(ms) {
-            const totalSeconds = Math.floor(ms / 1000);
-            const minutes = Math.floor(totalSeconds / 60);
-            const seconds = totalSeconds % 60;
-            const centiseconds = Math.floor((ms % 1000) / 10);
-            return (
-                String(minutes).padStart(2, "0") + ":" +
-                String(seconds).padStart(2, "0") + ":" +
-                String(centiseconds).padStart(2, "0")
-            );
-        }
-
-        function updateDisplay() {
-            elapsedTime = Date.now() - startTime;
-            display.textContent = formatTime(elapsedTime);
-        }
-
-        function startStopwatch() {
-            startTime = Date.now() - elapsedTime;
-            timerInterval = setInterval(updateDisplay, 10);
-            running = true;
-            startBtn.disabled = true;
-            pauseBtn.disabled = false;
-            lapBtn.disabled = false;
-        }
-
-        function pauseStopwatch() {
-            clearInterval(timerInterval);
-            running = false;
-            startBtn.disabled = false;
-            pauseBtn.disabled = true;
-            lapBtn.disabled = true;
-        }
-
-        function resetStopwatch() {
-            clearInterval(timerInterval);
-            elapsedTime = 0;
-            running = false;
-            lapCounter = 0;
-            lapTimes = [];
-            display.textContent = "00:00:00";
-            startBtn.disabled = false;
-            pauseBtn.disabled = true;
-            lapBtn.disabled = true;
-            lapTimesContainer.innerHTML = "";
-        }
-
-        function recordLap() {
-            if (running) {
-                lapCounter++;
-                const currentTime = formatTime(elapsedTime);
-                const lapTime = lapCounter === 1 ? currentTime : formatTime(elapsedTime - (lapTimes[lapTimes.length - 1]?.totalTime || 0));
-                
-                lapTimes.push({
-                    number: lapCounter,
-                    time: lapTime,
-                    totalTime: elapsedTime
-                });
-                
-                const lapItem = document.createElement("div");
-                lapItem.className = "lap-item";
-                lapItem.innerHTML = `
-                    <span class="lap-number">Lap ${lapCounter}</span>
-                    <span class="lap-time">${lapTime}</span>
-                `;
-                lapTimesContainer.insertBefore(lapItem, lapTimesContainer.firstChild);
-            }
-        }
-
-        startBtn.addEventListener("click", startStopwatch);
-        pauseBtn.addEventListener("click", pauseStopwatch);
-        resetBtn.addEventListener("click", resetStopwatch);
-        lapBtn.addEventListener("click", recordLap);
-    </script>
+function format(ms){
+    let sec=Math.floor(ms/1000), m=Math.floor(sec/60),
+    s=sec%60, cs=Math.floor((ms%1000)/10);
+    return `${String(m).padStart(2,"0")}:${String(s).padStart(2,"0")}:${String(cs).padStart(2,"0")}`;
+}
+function update(){ elapsedTime=Date.now()-startTime; display.textContent=format(elapsedTime); }
+function start(){
+    startTime=Date.now()-elapsedTime;
+    timerInterval=setInterval(update,10);
+    running=true; startBtn.disabled=true; pauseBtn.disabled=false;
+}
+function pause(){
+    clearInterval(timerInterval);
+    running=false; startBtn.disabled=false; pauseBtn.disabled=true;
+}
+function reset(){
+    clearInterval(timerInterval);
+    elapsedTime=0; display.textContent="00:00:00";
+    running=false; startBtn.disabled=false; pauseBtn.disabled=true;
+}
+startBtn.onclick=start;
+pauseBtn.onclick=pause;
+resetBtn.onclick=reset;
+</script>
 </body>
 </html>
