--- a/index.html
+++ b/index.html
@@ -3,74 +3,92 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Stopwatch with Laps</title>
+<title>Stopwatch</title>
 <style>
 body {
     font-family: Arial, sans-serif;
     background: linear-gradient(135deg, #74b9ff, #0984e3);
+    background-attachment: fixed;
+    background-size: cover;
     margin: 0;
     padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    min-height: 100vh;
+
+    /* Reduce gradient banding */
+    background-image:
+      linear-gradient(135deg, #74b9ff, #0984e3),
+      repeating-linear-gradient(135deg, rgba(255,255,255,0.02) 0px, rgba(255,255,255,0.02) 1px, transparent 1px, transparent 2px);
 }
-.stopwatch {
-    max-width: 350px;
-    margin: 50px auto;
-    padding: 20px;
+
+.container {
     background: white;
-    border-radius: 12px;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.2);
     text-align: center;
-    box-shadow: 0 0 15px rgba(0,0,0,0.15);
+    max-width: 350px;
+    width: 100%;
 }
+
 h1 {
-    margin-bottom: 20px;
-    font-weight: 500;
-    color: #2d3436;
+    font-size: 20px;
+    margin-bottom: 10px;
 }
-.time {
-    font-size: 48px;
-    font-family: 'Courier New', monospace;
-    margin-bottom: 15px;
+
+.timer {
+    font-size: 36px;
+    font-weight: bold;
     color: #0984e3;
+    margin: 20px 0;
 }
-.buttons {
-    margin-bottom: 20px;
-}
-button {
-    padding: 10px 15px;
-    font-size: 15px;
-    margin: 5px;
+
+.controls button {
+    padding: 8px 14px;
     border: none;
-    border-radius: 6px;
+    margin: 5px;
+    border-radius: 5px;
+    font-size: 14px;
     cursor: pointer;
+    color: white;
 }
-.start { background: #00b894; color: white; }
+
+.start { background: #00b894; }
 .pause { background: #fdcb6e; color: #2d3436; }
-.reset { background: #e17055; color: white; }
-.lap { background: #74b9ff; color: white; }
-button:disabled { background: #ccc; cursor: not-allowed; }
+.reset { background: #e17055; }
+.lap { background: #74b9ff; }
+
+.controls button:disabled {
+    background: #ccc;
+    cursor: not-allowed;
+}
+
 .laps {
+    margin-top: 15px;
     text-align: left;
     max-height: 200px;
     overflow-y: auto;
-    margin-top: 10px;
+    font-size: 14px;
 }
+
 .lap-item {
     display: flex;
     justify-content: space-between;
-    padding: 6px 10px;
-    margin: 4px 0;
     background: #f8f9fa;
-    border-radius: 6px;
-    border-left: 4px solid #74b9ff;
-    font-size: 14px;
+    padding: 5px 8px;
+    margin-bottom: 5px;
+    border-radius: 4px;
 }
-.lap-number { color: #0984e3; font-weight: bold; }
 </style>
 </head>
 <body>
-<div class="stopwatch">
+
+<div class="container">
     <h1>⏱ Stopwatch</h1>
-    <div class="time" id="display">00:00:00</div>
-    <div class="buttons">
+    <div class="timer" id="display">00:00:00</div>
+    <div class="controls">
         <button class="start" id="startBtn">Start</button>
         <button class="pause" id="pauseBtn" disabled>Pause</button>
         <button class="reset" id="resetBtn">Reset</button>
@@ -78,64 +96,73 @@ button:disabled { background: #ccc; cursor: not-allowed; }
     </div>
     <div class="laps" id="lapTimes"></div>
 </div>
-<script>
-let startTime=0, elapsedTime=0, timerInterval=null, running=false;
-const display=document.getElementById("display"),
-startBtn=document.getElementById("startBtn"),
-pauseBtn=document.getElementById("pauseBtn"),
-resetBtn=document.getElementById("resetBtn"),
-lapBtn=document.getElementById("lapBtn"),
-lapTimes=document.getElementById("lapTimes");
 
-function format(ms){
-    let sec=Math.floor(ms/1000),
-        m=Math.floor(sec/60),
-        s=sec%60,
-        cs=Math.floor((ms%1000)/10);
-    return `${String(m).padStart(2,"0")}:${String(s).padStart(2,"0")}:${String(cs).padStart(2,"0")}`;
+<script>
+let startTime = 0, elapsedTime = 0, timerInterval;
+let isRunning = false;
+
+const display = document.getElementById("display");
+const startBtn = document.getElementById("startBtn");
+const pauseBtn = document.getElementById("pauseBtn");
+const resetBtn = document.getElementById("resetBtn");
+const lapBtn = document.getElementById("lapBtn");
+const lapTimes = document.getElementById("lapTimes");
+
+function formatTime(ms) {
+    const totalSec = Math.floor(ms / 1000);
+    const minutes = Math.floor(totalSec / 60);
+    const seconds = totalSec % 60;
+    const centiseconds = Math.floor((ms % 1000) / 10);
+    return `${minutes.toString().padStart(2,"0")}:${seconds.toString().padStart(2,"0")}:${centiseconds.toString().padStart(2,"0")}`;
 }
-function update(){
-    elapsedTime=Date.now()-startTime;
-    display.textContent=format(elapsedTime);
+
+function updateDisplay() {
+    elapsedTime = Date.now() - startTime;
+    display.textContent = formatTime(elapsedTime);
 }
-function start(){
-    startTime=Date.now()-elapsedTime;
-    timerInterval=setInterval(update,10);
-    running=true;
-    startBtn.disabled=true;
-    pauseBtn.disabled=false;
-    lapBtn.disabled=false;
+
+function startStopwatch() {
+    startTime = Date.now() - elapsedTime;
+    timerInterval = setInterval(updateDisplay, 10);
+    isRunning = true;
+    startBtn.disabled = true;
+    pauseBtn.disabled = false;
+    lapBtn.disabled = false;
 }
-function pause(){
+
+function pauseStopwatch() {
     clearInterval(timerInterval);
-    running=false;
-    startBtn.disabled=false;
-    pauseBtn.disabled=true;
-    lapBtn.disabled=true;
+    isRunning = false;
+    startBtn.disabled = false;
+    pauseBtn.disabled = true;
+    lapBtn.disabled = true;
 }
-function reset(){
+
+function resetStopwatch() {
     clearInterval(timerInterval);
-    elapsedTime=0;
-    running=false;
-    display.textContent="00:00:00";
-    lapTimes.innerHTML="";
-    startBtn.disabled=false;
-    pauseBtn.disabled=true;
-    lapBtn.disabled=true;
+    elapsedTime = 0;
+    display.textContent = "00:00:00";
+    lapTimes.innerHTML = "";
+    isRunning = false;
+    startBtn.disabled = false;
+    pauseBtn.disabled = true;
+    lapBtn.disabled = true;
 }
-function lap(){
-    if(running){
-        const lapCount=lapTimes.children.length+1;
-        const lapItem=document.createElement("div");
-        lapItem.className="lap-item";
-        lapItem.innerHTML=`<span class="lap-number">Lap ${lapCount}</span><span>${format(elapsedTime)}</span>`;
-        lapTimes.insertBefore(lapItem,lapTimes.firstChild);
+
+function recordLap() {
+    if (isRunning) {
+        const lapItem = document.createElement("div");
+        lapItem.className = "lap-item";
+        lapItem.innerHTML = `<span>Lap ${lapTimes.children.length + 1}</span><span>${formatTime(elapsedTime)}</span>`;
+        lapTimes.insertBefore(lapItem, lapTimes.firstChild);
     }
 }
-startBtn.onclick=start;
-pauseBtn.onclick=pause;
-resetBtn.onclick=reset;
-lapBtn.onclick=lap;
+
+startBtn.addEventListener("click", startStopwatch);
+pauseBtn.addEventListener("click", pauseStopwatch);
+resetBtn.addEventListener("click", resetStopwatch);
+lapBtn.addEventListener("click", recordLap);
 </script>
+
 </body>
 </html>
